Comeco do portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,113 +1,193 @@
-<h2 class="logo">
-    Vinicius Rossado
-    <span>Senior Software Engineer</span>
-</h2>
-
-<input type="radio" id="aboutme" name="item" class="about-me" />
-<label for="aboutme" class="menu about-me">
-    <div class="preview"></div>
-    <div class="info">
-        <h2>
-            <div class="icon"></div>
-            About
-        </h2>
-        <h3>AAAA</h3>
-
+<div class="container-fluid p-5" style="color: white">
+  <div class="row">
+    <div class="col text-center">
+      <h1 class="title">Vinicius Rossado</h1>
+      <span class="secondary position">Senior Software Engineer</span>
     </div>
-</label>
+  </div>
+  <!-- <h2 class="logo">
 
-<input type="radio" id="experience" name="item" class="experience" />
-<label for="experience" class="menu experience ">
-    <div class="preview"></div>
-    <div class="info">
-        <h2>
-            <div class="icon"></div>
+  </h2> -->
+
+  <div class="row row-cols-3 pt-5">
+    <div class="col secondary topics">
+      <div class="section">
+        <div class="row">
+          <div class="col-12">
             Experience
-        </h2>
-        <h3>AAAA</h3>
-    </div>
-</label>
+            <img
+            class="img-fluid"
+            style="width: 30%; height: 50%"
+            src="../assets/icons/programming.svg"
+            alt=""
+          />
+          </div>
+        </div>
 
+        <div class="row mt-2">
 
-<input type="radio" id="education" name="item" class="education" />
-<label for="education" class="menu education ">
-    <div class="preview"></div>
-    <div class="info">
-        <h2>
-            <div class="icon"></div>
-            Education
-        </h2>
-        <h3>AAAA</h3>
-
-    </div>
-</label>
-
-<input type="radio" id="licensescertifications" name="item" class="licensescertifications" />
-<label for="licensescertifications" class="licenses-certifications menu">
-    <div class="info">
-        <h2>
-            Licenses & certifications
-        </h2>
-        <h3>AAAA</h3>
-
-    </div>
-</label>
-
-<div class="section">
-
-    <div class="section-item">
-        <div class="item about-me">
-            <div class="item-description about-me">
-                <h1>About Me</h1>
-                <p>Hi, I'm Vinícius.
-
-                    Currently working with Stencil and .NET Core at a financial company. One of my favorite things to do
-                    on my free time (besides playing the guitar) is to build new architectures in order to challenge
-                    myself with new development patterns. Besides, one of my hobbies includes learning new stacks, for
-                    instance, right now I'm quite interested in Golang.
-
-                    For the past few years I've also been interested in learning new languages and cultures, specially
-                    the nordic ones.
-
-                    You can reach me at my e-mail, if you want to see my personal projects, check out my github page:
-
-                    https://github.com/vinirossado
-                </p>
-
-                <label for="readAbout">
-                    <a> Read Mor
-                        <span>e</span>
-                    </a>
-                </label>
+          <div class="col-auto py-2" style="background-color: #101010">
+            <div class="experience py-1">
+              <span class="date">2023</span>
+              <span class="information"> Reclamador de JS LTDA </span>
             </div>
-            <div class="overlay"></div>
+
+            <div class="experience py-1">
+              <span class="date">2023</span>
+              <span class="information"> Odiador de React LTDA </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">2020</span>
+              <span class="information">
+                JS e Para Quem Gosta de Sofrer LTDA
+              </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">2020</span>
+              <span class="information">
+                JS e Para Quem Gosta de Sofrer LTDA
+              </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">2020</span>
+              <span class="information">
+                JS e Para Quem Gosta de Sofrer LTDA
+              </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">2020</span>
+              <span class="information">
+                JS e Para Quem Gosta de Sofrer LTDA
+              </span>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <input type="radio" id="readAbout" name="readAbout" class="read">
-    <label for="closeAbout" class="close"></label>
-    <input type="radio" id="closeAbout" name="readAbout" class="read">
-    <div class="panel">
-        <h1>OIIII EU SOU O OVERLAY</h1>
-    </div>
-
-    <div class="section-item">
-        <div class="item experience">
-
+      <div class="section">
+        <div class="row">
+          <div class="col-12">
+            <div class="col-4 text-center">
+              <img
+                class="img-fluid"
+                style="width: 30%; height: 50%"
+                src="../assets/icons/world.svg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-    </div>
 
-    <div class="section-item">
-        <div class="item education">
+        <div>Languages Known</div>
 
+        <div class="row mt-2">
+          <div class="col-auto py-2">
+            <div class="experience py-1">
+              <span class="date">Portuguese</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">English</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">Estonian</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">Russian</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">Italian</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="section">
+        Personal Interest
+
+        <div class="row mt-2">
+          <div class="col-auto py-2">
+            <div class="experience py-1">
+              <span class="date">Portuguese</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">English</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">Estonian</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">Russian</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+
+            <div class="experience py-1">
+              <span class="date">Italian</span>
+              <span class="information"> Native Fluent </span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
+    <div class="col text-center">
+      <div class="row">
+        <div class="col-auto">
+          <img
+            class="rounded-circle img-fluid personal-image"
+            style="width: 30%"
+            src="https://scontent-arn2-1.xx.fbcdn.net/v/t39.30808-6/334010437_600360258200984_4223357598234187260_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=t9puaZ2cYv8AX-d7viS&_nc_ht=scontent-arn2-1.xx&oh=00_AfDXNh7R6zAuiIkGZvLpNqZVLf-2069cIaEJwQc-YdY2TQ&oe=6419235B"
+            alt=""
+          />
+        </div>
+        <div class="row justify-content-center m-0 mt-3">
+          <div class="col-auto" style="color: white">Hi There...!</div>
+        </div>
 
+        <div class="row justify-content-center m-0">
+          <div class="col-7 mt-5" style="font-size: 16px; color: white">
+            Currently working with Stencil and .NET Core at a financial company.
+            One of my favorite things to do on my free time (besides playing the
+            guitar) is to build new architectures in order to challenge myself
+            with new development patterns. Besides, one of my hobbies includes
+            learning new stacks, for instance, right now I'm quite interested in
+            Golang. For the past few years I've also been interested in learning
+            new languages and cultures, specially the nordic ones.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">Contact</div>
+    <!-- <div class="row">
+        <div class="col-4" style="color: white"></div>
+        <div class="row">
+          <div class="col-12">
+            <div class="col-5 secondary topics">Experience</div>
+          </div>
+        </div>
+      </div> -->
+    <!-- <div class="col-4" style="color: white">
+        <div class="col-12">AAAAAAA</div>
+      </div> -->
+  </div>
 </div>
+<!-- </div> -->
